<resources>
    <string name="app_name">eShop</string>
    <string name="eshop_logo_content_description">Eshop Logo</string>
    <string name="es_hint_username">Username</string>
    <string name="es_hint_password">Password</string>
    <string name="es_button_next">Next</string>
    <string name="es_button_cancel">Cancel</string>
    <string name="es_error_password">Password must contain at least 8 characters.</string>

    <string name="es_filter_title">Filter</string>
    <string name="es_search_title">Search</string>

    <string name="es_product_title">Title</string>
    <string name="es_product_description">Secondary text</string>

    <!-- Eshop backdrop menu labels -->
    <string name="es_featured_label">Featured</string>
    <string name="es_apartment_label">Apartment</string>
    <string name="es_accessories_label">Accessories</string>
    <string name="es_shoes_label">Shoes</string>
    <string name="es_tops_label">Tops</string>
    <string name="es_bottoms_label">Bottoms</string>
    <string name="es_dresses_label">Dresses</string>
    <string name="es_account_label">My Account</string>
    <string name="es_logo_content_description">Shrine Logo</string>

    <!-- item categories available -->
    <string name="es_filter_page_title">Filters</string>
    <string name="es_price_range_section_title">Price Range</string>
    <string name="es_price_range_max">$1000+</string>
    <string name="es_international_shipping">International Shipping</string>
    <string name="es_personalized_feeds">Personalized Feeds</string>
    <string name="es_item_type_section_title">Item Type</string>
    <string name="es_item_type_women">Women</string>
    <string name="es_item_type_men">Men</string>
    <string name="es_item_type_girls">Girls</string>
    <string name="es_item_type_boys">Boys</string>

</resources>
