<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/AppBar"
        style="@style/Widget.Eshop.Toolbar.Filter"
        tools:ignore="UnusedAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                style="@style/Widget.Eshop.SectionItem.Container"
                android:paddingTop="@dimen/es_large_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/Widget.Eshop.TextView.SectionHeader"
                        android:text="@string/es_price_range_section_title"/>
                    <TextView
                        style="@style/Widget.Eshop.TextView.SectionHeaderEnd"
                        android:text="@string/es_price_range_max"/>
                </LinearLayout>
                <SeekBar
                    android:id="@+id/PriceRangeSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/es_large_spacing"
                    android:layout_marginBottom="@dimen/es_large_spacing"
                    android:paddingLeft="@dimen/shrine_seekbar_padding"
                    android:paddingRight="@dimen/shrine_seekbar_padding"/>
            </LinearLayout>
            <LinearLayout
                style="@style/Widget.Eshop.SectionItem.Container">
                <LinearLayout
                    style="@style/Widget.Eshop.SectionItem"
                    android:paddingTop="@dimen/es_small_spacing">
                    <TextView
                        style="@style/Widget.Eshop.TextView"
                        android:text="@string/es_international_shipping"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/Widget.Eshop.SectionItem"
                    android:paddingBottom="@dimen/es_small_spacing">
                    <TextView
                        style="@style/Widget.Eshop.TextView"
                        android:text="@string/es_personalized_feeds"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/Widget.Eshop.SectionItem.Container">
                <TextView
                    style="@style/Widget.Eshop.TextView.SectionHeader"
                    android:paddingTop="@dimen/es_standard_spacing"
                    android:paddingBottom="@dimen/es_standard_spacing"
                    android:text="@string/es_item_type_section_title"/>
                <LinearLayout
                    style="@style/Widget.Eshop.SectionItem">
                    <TextView
                        style="@style/Widget.Eshop.TextView"
                        android:text="@string/es_item_type_women"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/Widget.Eshop.SectionItem">
                    <TextView
                        style="@style/Widget.Eshop.TextView"
                        android:text="@string/es_item_type_men"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/Widget.Eshop.SectionItem">
                    <TextView
                        style="@style/Widget.Eshop.TextView"
                        android:text="@string/es_item_type_girls"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/Widget.Eshop.SectionItem">
                    <TextView
                        style="@style/Widget.Eshop.TextView"
                        android:text="@string/es_item_type_boys"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
